<resources>
    <string name="Button1">ENTER</string>
    <string name="nom">FirstName</string>
    <string name="prenom">LastName</string>
    <string name="radioH">Man</string>
    <string name="radioF">Woman</string>
    <string name="title">Street Workout ESIEA</string>
    <string name="description">BDS</string>
    <string name="app_name">Street Workout</string>
    <string name="titre_2">ESIEA</string>
    <string name="titre_1">Street Workout</string>
    <string name="toolbar">Toolbar</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="haut">Haut</string>
    <string name="bas">bas</string>
    <string name="abdos">abs</string>
    <string name="profil">Profil</string>
    <string name="upperbody">upperbody</string>
    <string name="lowerbody">lowerbody</string>
    <string name="abs">abs</string>
    <string name="a_propos">Help</string>
    <string name="action_upper">Upperbody</string>
    <string name="action_lower">Lowerbody</string>
    <string name="action_abdos">Abs</string>
    <string name="credit">Projet</string>
    <string name="profile">Profile</string>
    <string name="description_profile">Description</string>
    <string name="contentdescription">Picture</string>
    <string name="click">CLICK ME</string>
    <string name="motivation">Make your dreams come true, JUST DO IT !</string>
</resources>
