<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/index">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@android:color/darker_gray"
        android:text="@string/Button1"
        android:textColor="#ffffff"
        android:textSize="23sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText2"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="12"
        android:text="@string/prenom"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="23sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="12"
        android:text="@string/nom"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="23sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radioButton2"
        android:layout_alignBottom="@+id/radioButton2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="54dp"
        android:text="@string/radioH"
        android:textColor="#183d7c"
        android:textSize="23sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_marginStart="47dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/radioButton"
        android:text="@string/radioF"
        android:textColor="#9746a6"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#ffffff"
        android:textSize="27sp"
        android:textStyle="bold"/>

</RelativeLayout>