<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".profile">



    <View
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#A9A9A9"
        />





    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/line2"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_dra" />

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/youtube_view"
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logo"
        android:background="@color/colorLight"/>


    <TextView
        android:id="@+id/Titre_2"
        android:layout_width="wrap_content"
        android:layout_height="205dp"
        android:layout_alignBottom="@+id/button3"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/motivation"
        android:textColor="@color/colorLight"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:text="@string/click" />

</RelativeLayout>